--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
 api_key = mongodb+srv://abbasanosh:ONnbprOMr2Jj3tqc@cluster0.6w9dryq.mongodb.net/todo-mern?retryWrites=true&w=majority&appName=Cluster0
 PORT = 3000
+
+SECRET_KEY = "abcdefghijklmnopqrstuv"
