--- a/client/package.json
+++ b/client/package.json
@@ -15,13 +15,15 @@
     "@chakra-ui/system": "^2.6.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^2.2.2",
+    "axios": "^1.6.8",
     "framer-motion": "^11.0.20",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "redux": "^5.0.1",
-    "thunk": "^0.0.1"
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
