--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.0.20",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-datepicker": "^6.6.0",
     "react-datetime-picker": "^5.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
