--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,10 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "build": "babel src --out-dir dist"
+
   },
   "keywords": [],
   "author": "",
